# StitchingImageStudyOfU3DDemo

./: README.md
SimulateDemo/Assets/: Demo Render Texture.renderTexture  Test Render Texture.renderTexture  TestCamera.prefab
SimulateDemo/Assets/FBX/: Test.fbx  Wind_Turbine3.fbx
SimulateDemo/Assets/Materials/: BallMaterial.mat  LinelMaterial.mat  PlaneMaterial.mat  TestMaterial.mat  TestPlaneMaterial.mat
SimulateDemo/Assets/Scenes/: CameraScene.unity  SampleScene.unity
SimulateDemo/Assets/Scripts/: ImageBehaviourScript.cs  PlaneBehaviourScript.cs  TestBehaviourScript.cs  TestCamera.cs
SimulateDemo/Assets/Scripts/Editor/: TestScript.cs
SimulateDemo/ProjectSettings/: ProjectSettings.asset
SimulateDemo/UserSettings/: EditorUserSettings.asset
SimulateDemo/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt
StitchingImage/: CMakeLists.txt  CMakePresets.json  StitchingImage.properties
StitchingImage/src/: StitchingImageApp.cpp
